--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
+html {
+    scroll-behavior: smooth;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .MainPage {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.ScrollToTop {
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
