First Style Pass
First proper styling pass complete. General styling on desktop is complete, but will likely need some more refining to look more sleek.
Responsiveness will also be covered in another pass.
The CSS selectors should also be tidied up within each component to avoid having so many child/relational selectors in the CSS itself.

--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,9 +1,15 @@
-.LinkButtons {
+.PageFooter {
+    background-color: rgb(80, 141, 80);
+    height: 6vh;
+}
+
+.FooterLinks {
     display: flex;
+    height: 100%;
     justify-content: flex-end;
 }
 
-.LinkButtons > a {
+.FooterLinks > a {
     width: 10%;
     display: flex;
     align-items: center;
