--- a/index.css
+++ b/index.css
@@ -352,9 +352,13 @@
 
 /*-------- END OF NORMALIZE.CSS --------*/
 
+html {
+  scroll-behavior: smooth;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body, html, #root {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    box-sizing: border-box;
+  height: 100%;
+  margin: 0;
+  box-sizing: border-box;
 }
