--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,12 @@
-html {
-    scroll-behavior: smooth;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .MainPage {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    background-color: rgb(255, 255, 236);
 }
 
 .ScrollToTop {
     position: fixed;
-    bottom: 0;
-    left: 0;
+    bottom: 15px;
+    left: 15px;
 }
