--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,3 +1,28 @@
 .AboutSection {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(175, 212, 188);
+    height: 50vh;
+}
+
+.AboutText {
+    height: 60%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.AboutText > button {
+    width: 30%;
+}
+.AboutImage {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    height: 400px;
+    border-radius: 50%;
 }
