--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,11 +1,34 @@
 .ContactSection {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 50vh;
 }
 
 .ContactForm {
-    width: 60%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
+    width: 50%;
+    height: 100%;
+}
+
+input[name="messageTitle"], input[name="email"] {
+    border: none;
+    border-radius: 8px;
+    height: 8%;
+    width: 100%;
+}
+
+input[name="message"]{
+    height: 42%;
+    width: 100%;
+    border-radius: 8px;
+    border: none;
+}
+
+.ContactForm > button {
+    width: 30%;
 }
