--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,24 +1,27 @@
 .Navbar
 {   
-    width: 100%;
     height: 6.5%;
     position: fixed;
     top: 0;
+    z-index: 5;
+    box-shadow: 2px 2px 20px 2px black;
+    width: 100%;
 }
 
 .NavLinks {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    align-items: center;
     height: 100%;
     gap: 1%;
-    background-color: rgb(218, 218, 203);
+    background-color: rgb(80, 141, 80);
     list-style-type: none;
     margin: 0;
-    padding-right: 2000px;
     padding: 0;
 }
 
 .NavLinks > * >* {
     text-decoration: none;
     color: black;
+    font-size: 20px;
 }
