--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -1,13 +1,22 @@
 .ProjectsSection {
-    padding: 15px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-gap: 15px;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
+    height: 75vh;
+}
+
+.ProjectCard {
+    box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
 }
 
 .ProjectCardBackground {
     display: flex;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    height: 100%;
 }
 
 .CardButtons {
@@ -16,28 +25,104 @@
 }
 
 .FirstCard {
-    grid-column: 1 / 4;
-    grid-row: 1 / 3;
+    grid-column: 2 / 11;
+    grid-row: 2 / 7;
+}
+
+#FirstCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#FirstCard > .CardButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 80%;
+    height: 17%;
+}
+
+#FirstCard > .CardButtons > * {
+    height: 100%;
+    width: 22%;
 }
 
 .SecondCard {
-    grid-column: 4 / 7;
-    grid-row: 1 / 3;
+    grid-column: 2 / 5;
+    grid-row: 7 / 12;
+}
+
+#SecondCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#SecondCard > .CardButtons {
+    display: flex;
+    justify-content: space-evenly;
+    height: 40%;
+    width: 80%;
 }
 
 .ThirdCard {
-    grid-column: 1 / 4;
-    grid-row: 3 / 5;
+    grid-column: 5 / 8;
+    grid-row: 7 / 11;
 }
 
 .FourthCard {
-    grid-column: 4 / 7;
-    grid-row: 3 / 5;
+    grid-column: 8 / 11;
+    grid-row: 7 / 11;
+}
+
+#ThirdCard, #FourthCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#ThirdCard > .CardButtons, #FourthCard >.CardButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+#ThirdCard >.CardButtons > .button-0, 
+#FourthCard > .CardButtons > .button-0 {
+    width: 80%;
+}
+
+#ThirdCard >.CardButtons > .button-1,
+#ThirdCard >.CardButtons > .button-2,
+#FourthCard >.CardButtons > .button-1,
+#FourthCard >.CardButtons > .button-2 {
+    width: 34%;
 }
 
 .FifthCard {
-    grid-column: 2 / 6;
-
+    grid-column: 5 / 11;
+    grid-row: 11 / 12;
     display: flex;
     flex-direction: column;
+}
+
+#FifthCard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#FifthCard > .CardButtons {
+    display: flex;
+    justify-content: space-evenly;
+    height: 100%;
 }
