--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -1,5 +1,4 @@
 .HeroSection {
-    padding-top: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,11 +7,18 @@
 
 .HeroText {
     display: flex;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     text-align: center;
     width: 100%;
     font-size: 30px;
+}
+
+.HeroCanvas {
+    margin-top: 7.5%;
+    width: 100vw;
+    height: 90%;
 }
 
 .LinkButtons {
