--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 75vh;
+    height: 100vh;
 }
 
 .HeroText {
@@ -16,9 +16,8 @@
 }
 
 .HeroCanvas {
-    margin-top: 7.5%;
-    width: 100vw;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 .LinkButtons {
