--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
+    width: 100vw;
 }
 
 .HeroText {
@@ -16,8 +17,9 @@
 }
 
 .HeroCanvas {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
 }
 
 .LinkButtons {
