--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    width: 100vw;
 }
 
 .HeroText {
@@ -17,9 +16,8 @@
 }
 
 .HeroCanvas {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .LinkButtons {
