Added basic responsiveness to some sections, Projects section needs reworking

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -11,8 +11,14 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    width: 50%;
+    width: 60%;
     height: 100%;
+}
+
+@Media (max-width: 800px) {
+    .ContactForm {
+        width: 80%;
+    }
 }
 
 input[name="messageTitle"], input[name="email"] {
