--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -27,3 +27,11 @@
     width: 50%;
 }
 
+@media (max-width: 800px) {
+    .LinkButtons {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+
