--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -5,7 +5,7 @@
     align-self: center;
     padding: 2%;
     grid-gap: 2%;
-    height: 100%;
+    height: 100vh;
     width: 90%;
     grid-template-areas: 
     "a a b b"
@@ -23,6 +23,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding: 4px;
 }
 
 .ProjectCardBackground {
@@ -32,6 +33,16 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.CardButtons {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.CardButtons > * {
+    width: 30%;
 }
 
 .FirstCard {
@@ -52,6 +63,21 @@
 
 .FifthCard {
     grid-area: e;
+    flex-direction: row;
+}
+
+.FifthCard > .ProjectCardBackground {
+    height: 100%;
+}
+
+.FifthCard > .CardButtons {
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+
+.FifthCard > .CardButtons > * {
+    width: 60%;
 }
 
 @Media (max-width: 800px) {
@@ -92,7 +118,13 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        align-items: center;
         height: 100%;
+    }
+    
+    .CardButtons > * {
+        width: 100px;
+        height: 50px;
     }
 
 }
