--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -34,4 +34,16 @@
     }
 }
 
+@Media (max-height: 450px) {
+    .HeroSection {
+        height: 400px;
+    }
+}
+
+@Media (max-width: 350px) {
+    .HeroSection {
+        height: 800px;
+    }
+}
+
 
