--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -8,7 +8,7 @@
 
 .AboutText {
     height: 60%;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -19,11 +19,11 @@
     width: 40%;
 }
 .AboutImage {
-    width: 45vw;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     background-color: white;
-    height: 45vw;
     border-radius: 50%;
 }
 
@@ -32,6 +32,29 @@
     .AboutSection {
         flex-direction: column;
         justify-content: space-evenly;
+    }
+
+    .AboutText {
+        text-align: center;
+        height: 30%;
+        width: 80%;
+    }
+
+    .AboutText > button {
+        width: 60%;
+    }
+}
+
+@Media (max-height: 850px) {
+    .AboutSection {
+        height: 450px;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .AboutImage {
+        height: 30vw;
+        width: 30vw;
     }
 
     .AboutText {
