--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -58,8 +58,8 @@
     }
 
     .AboutImage {
-        height: 30vw;
-        width: 30vw;
+        height: 200px;
+        width: 200px;
     }
 
     .AboutText {
