--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -15,6 +15,10 @@
     height: 100%;
 }
 
+.ContactForm > input {
+    background-color: rgba(175, 212, 188, 0.3);
+}
+
 @Media (max-width: 800px) {
     .ContactForm {
         width: 80%;
@@ -36,7 +40,11 @@ input[name="message"]{
 }
 
 .ContactForm > button {
-    width: 30%;
+    width: 150px;
+    height: 10%;
+    border: 0;
+    background-color: rgba(175, 212, 188, 0.3);
+    border-radius: 8px;
 }
 
 @Media (max-height: 700px) {
