--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -15,3 +15,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.FooterLinks > a:hover {
+    box-shadow: 0 0 0px 4px rgb(80, 141, 80);
+    translate: translate(0px, 20px);
+}
+
+.FooterLinks > a:hover > * {
+    scale: 1.1;
+}
