--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -27,6 +27,10 @@
     width: 50%;
 }
 
+.LinkButtons > a:hover {
+    scale: 1.1;
+}
+
 @media (max-width: 800px) {
     .LinkButtons {
         width: 100%;
