--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -4,29 +4,10 @@
     height: 50vh !important;
 }
 
-@Media (max-width: 800px) {
-    .SkillsSection {
-        flex-direction: column;
-        height: 100vh !important;
-    }
-
-    .Subcategories {
-        display: flex;
-        height: 50%;
-        justify-content: center !important;
-    }
-}
-
-@Media (max-width: 400px) {
-    .SkillCard {
-        font-size: 12px;
-    }
-}
-
 .Subcategories {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -80,5 +61,18 @@
 
     .SkillCard {
         height: 300px;
+    }
+}
+
+@Media (max-width: 800px) {
+    .SkillsSection {
+        flex-direction: column;
+        height: 100vh !important;
+    }
+}
+
+@Media (max-width: 400px) {
+    .SkillCard {
+        font-size: 12px;
     }
 }
