--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -55,6 +55,11 @@
     border-radius: 7px;
 }
 
+.CardButtons > *:hover {
+    box-shadow: 0 0 2px 2px rgb(255, 255, 236);
+    scale: 1.05;
+}
+
 .FirstCard {
     grid-area: a;
 }
@@ -209,6 +214,8 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 15px;
     }
 
     .CardButtons {
