--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -14,6 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .FooterLinks > a:hover {
