--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     z-index: 5;
-    box-shadow: 2px 2px 20px 2px black;
+    box-shadow: 0px 0px 5px 2px black;
     width: 100%;
 }
 
@@ -35,6 +35,17 @@
 @Media (max-width: 700px ) 
 {
     .Navbar {
-        height: 5%;
+        height: 3%;
+    }
+
+    .NavLinks > * >* {
+        font-size: 18px;
+    }
+}
+
+@Media (max-width: 450px)
+{
+    .NavLinks > * >* {
+        font-size: 15px;
     }
 }
