--- a/src/components/styles/Hero.css
+++ b/src/components/styles/Hero.css
@@ -15,6 +15,16 @@
     font-size: 30px;
 }
 
+.HeroText > h1 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.HeroText > h4 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .HeroCanvas {
     width: 100%;
     height: 100%;
