Contact Form Functional
Implemented contact form functionality using EmailJS to send the emails to my inbox. Lines 50-55 in Contact.tsx need uncommenting for the emails to send properly. Left commented to enable testing without spamming emails.

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -17,9 +17,11 @@
 
 .ContactForm > input {
     background-color: rgba(175, 212, 188, 0.3);
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-input[name="messageTitle"], input[name="email"] {
+input[name="title"], input[name="email"], input[name="name"]{
     border: none;
     border-radius: 8px;
     height: 8%;
