--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -8,12 +8,12 @@
     height: 100vh;
     width: 90%;
     grid-template-areas: 
-    "a a b b"
-    "a a b b"
-    "a a b b"
-    "c c d d"
-    "c c d d"
-    ". e e .";
+    "a a a a"
+    "a a a a"
+    "a a a a"
+    "b b c c"
+    "b b c c"
+    "b b d d";
 }
 
 .ProjectCard {
@@ -24,6 +24,10 @@
     padding: 8px;
     background-color: rgba(175, 212, 188, 0.5);
     border-radius: 15px;
+}
+
+.ProjectCard > h4 {
+    font-size: 0.5em;
 }
 
 .ProjectCardBackground {
@@ -105,13 +109,13 @@
         grid-template-areas: 
         "a a a a"
         "a a a a"
+        "a a a a"
         "b b b b"
         "b b b b"
         "c c c c"
         "c c c c"
         "d d d d"
-        "d d d d"
-        "e e e e";
+        "d d d d";
     }
 
     .ProjectCard {
@@ -169,15 +173,15 @@
 @Media (max-width: 500px) 
 {
     .CardText > h1 {
-        font-size: 16px;
+        font-size: 1.6em;
     }
 
     .CardText > h3 {
-        font-size: 13px;;
+        font-size: 1em;
     }
 
     .CardText > h4 {
-        font-size: 11px;;
+        font-size: 0.8em;
     }
 }
 
