--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -10,14 +10,15 @@
 
 .NavLinks {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
     height: 100%;
-    gap: 1%;
-    background-color: rgb(80, 141, 80);
+    gap: 2%;
+    background-color: rgba(80, 141, 80, 0.6);
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-right: 2%;
 }
 
 
@@ -35,7 +36,7 @@
 @Media (max-width: 700px ) 
 {
     .Navbar {
-        height: 3%;
+        height: 5%;
     }
 
     .NavLinks > * >* {
