--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    background-color: rgb(255, 255, 236);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .ScrollToTop {
