--- a/index.css
+++ b/index.css
@@ -354,7 +354,7 @@
 
 html {
   scroll-behavior: smooth;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 body, html, #root {
