--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -2,17 +2,19 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(175, 212, 188);
-    height: 60vh;
+    background-color: rgb(76, 97, 76);
+    height: 40vh;
 }
 
 .AboutText {
-    height: 60%;
-    width: 40%;
+    height: 100%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    font-size: 1.1em;
+    color: white;
 }
 
 .AboutText > button {
