--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -16,10 +16,22 @@
 }
 
 input {
-    background-color: rgba(175, 212, 188, 0.3);
+    background-color: rgb(76, 97, 76);
     box-sizing: border-box;
     padding-left: 10px;
-    padding-right: 10px;;
+    padding-right: 10px;
+    color: white;
+    outline:rgb(221, 170, 170);
+}
+
+input::placeholder
+{
+    color: white;
+}
+
+input:hover, .textArea:hover {
+    background-color: rgb(46, 58, 46);
+    box-shadow: 0 0 7px 0 rgb(46, 58, 46);
 }
 
 input[name="title"], input[name="email"], input[name="name"]{
@@ -30,10 +42,11 @@ input[name="title"], input[name="email"], input[name="name"]{
 }
 
 .textArea {
-    background-color: rgba(175, 212, 188, 0.3);
+    background-color: rgb(76, 97, 76);
     box-sizing: border-box;
     padding-left: 10px;
-    padding-right: 10px;;
+    padding-right: 10px;
+    padding-top: 2%;
     height: 100%;
     width: 100%;
     border-radius: 8px;
@@ -42,19 +55,28 @@ input[name="title"], input[name="email"], input[name="name"]{
     min-height: 100px;
     max-width: 100%;
     max-height: 100%;
+    color: white;
+    outline: none;
+}
+
+.textArea::placeholder
+{
+    color: white;
 }
 
 .ContactForm > button {
     width: 150px;
     height: 10%;
     border: 0;
-    background-color: rgba(175, 212, 188, 0.3);
+    background-color: rgb(76, 97, 76);
     border-radius: 8px;
+    color: white;
 }
 
 .ContactForm > button:hover {
     scale: 1.02;
     box-shadow: 0 0 2px 2px rgba(175, 212, 188, 0.3);
+    background-color: rgb(46, 58, 46);
 }
 
 .FormSection {
