--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,24 +1,33 @@
 .Navbar
 {   
-    height: 7.5%;
+    height: 5%;
     position: fixed;
     top: 0;
     z-index: 5;
-    box-shadow: 0px 0px 5px 2px black;
     width: 100%;
+}
+
+.NavbarBG {
+    background-color:rgb(65, 83, 65);
+    border-bottom: 1.5px solid rgba(216, 86, 25, 0.3);
+    box-shadow: 0 0 7px 0px rgba(216, 86, 25, 0.1);
 }
 
 .NavLinks {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     height: 100%;
     gap: 2%;
-    background-color: rgba(80, 141, 80, 0.6);
+    /* background-color: rgba(42, 82, 42, 0.644); */
     list-style-type: none;
     margin: 0;
     padding: 0;
     padding-right: 2%;
+}
+
+.NavLinksBG > * > * {
+    color: white!important;
 }
 
 
@@ -30,7 +39,8 @@
 }
 
 .NavLinks > * > *:hover {
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid rgb(216, 86, 25);
+    color: rgb(167, 65, 18);
 }
 
 @Media (max-width: 700px ) 
