--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -22,8 +22,15 @@
     justify-content: space-around;
     align-items: center;
     padding: 8px;
-    background-color: rgba(175, 212, 188, 0.5);
+    background-color: rgb(76, 97, 76);
     border-radius: 15px;
+    box-shadow: 0px 0px 5px 2px rgba(76, 97, 76, 0.5);
+}
+
+.ProjectCard:hover {
+    box-shadow: 0 0 15px 0 rgba(216, 86, 25, 0.3);
+    background-color: rgb(46, 58, 46);
+    scale: 1.02;
 }
 
 .ProjectCard > h4 {
@@ -32,14 +39,13 @@
 
 .ProjectCardBackground {
     width: 100%;
-    height: 70%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: rgb(255, 255, 236);
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+    background-color: rgb(230, 228, 228);
+    border-radius: 15px;
 }
 
 .CardButtons {
@@ -48,20 +54,22 @@
     justify-content: space-evenly;
     align-items: center;
     height: 40%;
-    
 }
 
 .CardButtons > * {
     width: 30%;
     height: 40px;
-    background-color: rgb(255, 255, 236);
+    background-color: rgb(76, 97, 76);
+    color: white;
     border: 0;
     border-radius: 7px;
+    margin-bottom: 2%;
 }
 
 .CardButtons > *:hover {
-    box-shadow: 0 0 2px 2px rgb(255, 255, 236);
-    scale: 1.05;
+    box-shadow: 0 0 7px 0px rgb(106, 134, 106);
+    scale: 1.02;
+    background-color: rgb(46, 58, 46);
 }
 
 .FirstCard {
@@ -101,6 +109,12 @@
 .FifthCard > .CardButtons > * {
     width: 70%;
 }
+
+.projectDescription {
+    margin: auto;
+    width: 80%;
+}
+
 
 @Media (max-width: 800px) {
     .ProjectsSection {
