--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -1,6 +1,6 @@
 .SkillsSection {
     display: flex;
-    background-color: rgb(175, 212, 188);
+    background-color: rgb(76, 97, 76);
     height: 50vh !important;
 }
 
@@ -15,6 +15,8 @@
 
 .Subcategories > h3 {
     font-size: 30px;
+    color: white;
+    text-decoration: underline;
 }
 
 .SkillCards {
@@ -32,9 +34,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.295);
     font-size: 1.4em;
+    color: white;
 }
+
+.SkillCard:hover {
+    box-shadow: 0 0 20px 2px rgba(216, 86, 25, 0.1);
+}
+
 
 .SkillCard > h4 {
     display: flex;
