--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,6 +1,6 @@
 .AboutSection {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     background-color: rgb(76, 97, 76);
     height: 40vh;
@@ -8,12 +8,12 @@
 
 .AboutText {
     height: 100%;
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    font-size: 1.1em;
+    font-size: 1em;
     color: white;
 }
 
@@ -52,9 +52,9 @@
     }
 
     .AboutText {
-        text-align: center;
         height: 30%;
-        width: 80%;
+        width: 95%;
+        font-size: 0.75em;
     }
 
     .AboutText > button {
@@ -75,9 +75,8 @@
     }
 
     .AboutText {
-        text-align: center;
         height: 30%;
-        width: 80%;
+        width: 90%;
     }
 
     .AboutText > button {
