--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -1,6 +1,6 @@
 .ProjectsSection {
     display: grid;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(4, 1fr);
     align-self: center;
     padding: 2%;
@@ -13,7 +13,8 @@
     "a a a a"
     "b b c c"
     "b b c c"
-    "b b d d";
+    "b b c c"
+    "b b d d ";
 }
 
 .ProjectCard {
@@ -30,7 +31,7 @@
 .ProjectCard:hover {
     box-shadow: 0 0 15px 0 rgba(216, 86, 25, 0.3);
     background-color: rgb(46, 58, 46);
-    scale: 1.02;
+    scale: 1.01;
 }
 
 .ProjectCard > h4 {
@@ -40,12 +41,18 @@
 .ProjectCardBackground {
     width: 100%;
     height: 100%;
+    background-color: rgb(230, 228, 228);
+    border-radius: 15px;
+}
+
+.TextBackground {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: rgb(230, 228, 228);
-    border-radius: 15px;
+    justify-content: space-evenly;
 }
 
 .CardButtons {
@@ -53,7 +60,6 @@
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
-    height: 40%;
 }
 
 .CardButtons > * {
@@ -64,6 +70,8 @@
     border: 0;
     border-radius: 7px;
     margin-bottom: 2%;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .CardButtons > *:hover {
@@ -93,6 +101,20 @@
     flex-direction: row;
 }
 
+.FirstCard > .ProjectCardBackground {
+    background-image: url(/assets/InvadersTakeover.png);
+    border-radius: 15px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.FirstCard > .ProjectCardBackground > .TextBackground {
+    color: white;
+    background-color: rgba(0,0,0,0.65);
+    height: 100%;
+    border-radius: 15px;
+}
+
 .FifthCard > .ProjectCardBackground {
     height: 100%;
     border-top-right-radius: 0;
@@ -115,9 +137,108 @@
     width: 80%;
 }
 
+.CardText > h3 {
+    margin: 10px;
+}
+
+.CardText > h4 {
+    font-size: 0.8em;
+}
 
 @Media (max-width: 800px) {
     .ProjectsSection {
+        grid-template-rows: repeat(9, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-areas: 
+        "a a a a"
+        "a a a a"
+        "a a a a"
+        "b b b b"
+        "b b b b"
+        "c c c c"
+        "c c c c"
+        "d d d d"
+        "d d d d";
+    }
+    
+    .ProjectCardBackground {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .ProjectCard {
+        border-radius: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .projectDescription {
+        margin: auto;
+        width: 90%;
+    }
+    
+    .CardText {
+        height: 100%;
+    }
+
+    .CardText > h1 {
+        font-size: 1.6em;
+    }
+
+    .CardButtons {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 40%;
+    }
+    
+    .CardButtons > * {
+        width: 70%;
+        height: 20px;
+        font-size: 68%;
+    }   
+
+    .TextBackground {
+        font-size: 0.9em;
+    }
+
+    .FifthCard > .CardButtons > * {
+        width: 90px;
+    }
+    
+}
+
+@Media (max-width: 500px) 
+{
+    .CardText > h1 {
+        font-size: 1.6em;
+    }
+
+    .CardText > h3 {
+        margin: 0;
+        font-size: 1em;
+    }
+
+    .CardText > h4 {
+        font-size: 0.8em;
+    }
+
+    .projectDescription {
+        margin: auto;
+        width: 95%;
+    }
+}
+
+@Media (max-height: 800px) {
+    .ProjectsSection {
+        height: 100%;
         grid-template-rows: repeat(9, 1fr);
         grid-template-columns: repeat(1, 1fr);
         grid-template-areas: 
@@ -141,26 +262,12 @@
     }
     
     .ProjectCardBackground {
-        width: 60%;
+        width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 15px;
-    }
-    
-    .CardText {
-        height: 100%;
-    }
-
-    .CardText > h1 {
-        font-size: 30px;
-    }
-
-    .CardText > * {
-        margin: 5px;
     }
 
     .CardButtons {
@@ -168,85 +275,18 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        height: 100%;
+        height: 20%;
         width: 40%;
-    }
-    
-    .CardButtons > * {
-        width: 100px;
-        height: 25px;
-        font-size: 12px;
-    }
-
-    .FifthCard > .CardButtons > * {
-        width: 90px;
-    }
-    
-}
-
-@Media (max-width: 500px) 
-{
-    .CardText > h1 {
-        font-size: 1.6em;
-    }
-
-    .CardText > h3 {
-        font-size: 1em;
-    }
-
-    .CardText > h4 {
-        font-size: 0.8em;
-    }
-}
-
-@Media (max-height: 800px) {
-    .ProjectsSection {
-        height: 100%;
-        grid-template-rows: repeat(9, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-areas: 
-        "a a a a"
-        "a a a a"
-        "b b b b"
-        "b b b b"
-        "c c c c"
-        "c c c c"
-        "d d d d"
-        "d d d d"
-        "e e e e";
-    }
-
-    .ProjectCard {
-        border-radius: 15px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-    }
-    
-    .ProjectCardBackground {
-        width: 60%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 15px;
-    }
-
-    .CardButtons {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        height: 100%;
-        width: 40%;
+        margin: 10px 0 20px 0;
     }
     
     .CardButtons > * {
         width: 70%;
-        height: 25px;
+        height: 20px;
         font-size: 68%;
+    }
+
+    .projectDescription {
+        margin: auto;
     }
 }
