--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -158,7 +158,8 @@
 
 @Media (max-width: 800px) {
     .ProjectsSection {
-        grid-template-rows: repeat(9, 1fr);
+        height: 100%;
+        grid-template-rows: repeat(11, 1fr);
         grid-template-columns: repeat(1, 1fr);
         grid-template-areas: 
         "a a a a"
@@ -166,10 +167,20 @@
         "a a a a"
         "b b b b"
         "b b b b"
+        "b b b b"
+        "c c c c"
         "c c c c"
         "c c c c"
         "d d d d"
         "d d d d";
+    }
+
+    .ProjectCard {
+        border-radius: 15px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
     }
     
     .ProjectCardBackground {
@@ -181,36 +192,25 @@
         text-align: center;
     }
 
-    .ProjectCard {
-        border-radius: 15px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-    }
-    
-    .projectDescription {
-        margin: auto;
-        width: 90%;
-    }
-
-    .CardText > h1 {
-        font-size: 1.6em;
-    }
-
     .CardButtons {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
+        height: 20%;
         width: 40%;
+        margin: 10px 0 20px 0;
     }
     
     .CardButtons > * {
         width: 70%;
         height: 20px;
         font-size: 68%;
-    }   
+    }
+
+    .projectDescription {
+        margin: auto;
+    }
 
     .TextBackground {
         font-size: 0.9em;
@@ -246,7 +246,7 @@
 @Media (max-height: 800px) {
     .ProjectsSection {
         height: 100%;
-        grid-template-rows: repeat(9, 1fr);
+        grid-template-rows: repeat(11, 1fr);
         grid-template-columns: repeat(1, 1fr);
         grid-template-areas: 
         "a a a a"
@@ -254,6 +254,8 @@
         "a a a a"
         "b b b b"
         "b b b b"
+        "b b b b"
+        "c c c c"
         "c c c c"
         "c c c c"
         "d d d d"
